--- a/OpenSudoku/res/layout/folder_list.xml
+++ b/OpenSudoku/res/layout/folder_list.xml
@@ -11,11 +11,11 @@
         android:layout_weight="1"
         android:drawSelectorOnTop="false" />
 
-    <Button
-        android:id="@+id/get_more_puzzles"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/get_more_puzzles_online" />
+    <!--<Button-->
+        <!--android:id="@+id/get_more_puzzles"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/get_more_puzzles_online" />-->
 
 </LinearLayout>
